// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates project 1`] = `
<Modal
  contentLabel="modal form"
  onRequestClose={[MockFunction]}
>
  <form
    id="create-project-form"
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        qualifiers.create.TRK
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <MandatoryFieldsExplanation
        className="modal-field"
      />
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-name"
        >
          name
          <MandatoryFieldMarker />
        </label>
        <input
          autoFocus={true}
          id="create-project-name"
          maxLength={2000}
          name="name"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-key"
        >
          key
          <MandatoryFieldMarker />
        </label>
        <input
          id="create-project-key"
          maxLength={400}
          name="key"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label>
          visibility
        </label>
        <VisibilitySelector
          canTurnToPrivate={true}
          className="little-spacer-top"
          onChange={[Function]}
          visibility="public"
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
        id="create-project-submit"
      >
        create
      </SubmitButton>
      <ResetButtonLink
        id="create-project-cancel"
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`creates project 2`] = `
<Modal
  contentLabel="modal form"
  onRequestClose={[MockFunction]}
>
  <form
    id="create-project-form"
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        qualifiers.create.TRK
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <MandatoryFieldsExplanation
        className="modal-field"
      />
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-name"
        >
          name
          <MandatoryFieldMarker />
        </label>
        <input
          autoFocus={true}
          id="create-project-name"
          maxLength={2000}
          name="name"
          onChange={[Function]}
          required={true}
          type="text"
          value="name"
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-key"
        >
          key
          <MandatoryFieldMarker />
        </label>
        <input
          id="create-project-key"
          maxLength={400}
          name="key"
          onChange={[Function]}
          required={true}
          type="text"
          value="key"
        />
      </div>
      <div
        className="modal-field"
      >
        <label>
          visibility
        </label>
        <VisibilitySelector
          canTurnToPrivate={true}
          className="little-spacer-top"
          onChange={[Function]}
          visibility="private"
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
        id="create-project-submit"
      >
        create
      </SubmitButton>
      <ResetButtonLink
        id="create-project-cancel"
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`creates project 3`] = `
<Modal
  contentLabel="modal form"
  onRequestClose={[MockFunction]}
>
  <form
    id="create-project-form"
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        qualifiers.create.TRK
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <MandatoryFieldsExplanation
        className="modal-field"
      />
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-name"
        >
          name
          <MandatoryFieldMarker />
        </label>
        <input
          autoFocus={true}
          id="create-project-name"
          maxLength={2000}
          name="name"
          onChange={[Function]}
          required={true}
          type="text"
          value="name"
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-key"
        >
          key
          <MandatoryFieldMarker />
        </label>
        <input
          id="create-project-key"
          maxLength={400}
          name="key"
          onChange={[Function]}
          required={true}
          type="text"
          value="key"
        />
      </div>
      <div
        className="modal-field"
      >
        <label>
          visibility
        </label>
        <VisibilitySelector
          canTurnToPrivate={true}
          className="little-spacer-top"
          onChange={[Function]}
          visibility="private"
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <SubmitButton
        disabled={true}
        id="create-project-submit"
      >
        create
      </SubmitButton>
      <ResetButtonLink
        id="create-project-cancel"
        onClick={[MockFunction]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`creates project 4`] = `
<Modal
  contentLabel="modal form"
  onRequestClose={[MockFunction]}
>
  <div>
    <header
      className="modal-head"
    >
      <h2>
        qualifiers.create.TRK
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <Alert
        variant="success"
      >
        <FormattedMessage
          defaultMessage="projects_management.project_has_been_successfully_created"
          id="projects_management.project_has_been_successfully_created"
          values={
            Object {
              "project": <Link
                to={
                  Object {
                    "pathname": "/dashboard",
                    "search": "?id=name",
                  }
                }
              >
                name
              </Link>,
            }
          }
        />
      </Alert>
    </div>
    <footer
      className="modal-foot"
    >
      <ResetButtonLink
        id="create-project-close"
        innerRef={[Function]}
        onClick={[MockFunction]}
      >
        close
      </ResetButtonLink>
    </footer>
  </div>
</Modal>
`;
